ingress/sale.yaml
apiVersion: v1
kind: Service
metadata:
  name: sale-service
spec:
  selector:
    app: sale
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sale
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sale
  template:
    metadata:
      labels:
        app: sale
    spec:
      containers:
      - name: sale
        image: asia-northeast3-docker.pkg.dev/johnlee-463800/my-regi/k8s:sale
        imagePullPolicy: Always
        ports:
        - containerPort: 80
